<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register.RegisterActivity">

    <com.example.view.ToolBar
        android:gravity="center"
        android:layout_width="match_parent"
        app:leftIsShow="true"
        app:leftImg="@drawable/back"
        android:id="@+id/toolbar"
        app:titleText="@string/register_new_user"
        app:titleTextColor="#000000"
        android:layout_height="@dimen/dp_50"></com.example.view.ToolBar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/new_login_background"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="@dimen/dp_40"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150"
            android:src="@drawable/community_default_user_icon"></ImageView>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/lin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountNumber"
                android:textSize="@dimen/dp_30"
                android:textColor="#000000"></TextView>

            <EditText
                android:id="@+id/register_username"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_user"></EditText>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/gray"></View>

        <LinearLayout
            android:background="@drawable/lin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/dp_30"
                android:textColor="#000000"></TextView>

            <EditText
                android:id="@+id/register_pwd"
                android:background="@null"
                android:layout_width="@dimen/dp_300"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/please_pwd"></EditText>

            <ImageView
                android:id="@+id/password_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/new_password_drawable_invisible"></ImageView>

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/lin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pwd"
                android:textSize="@dimen/dp_30"
                android:textColor="#000000"></TextView>

            <EditText
                android:id="@+id/register_cm_pwd"
                android:background="@null"
                android:layout_width="@dimen/dp_240"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/please_more_pwd"></EditText>

            <ImageView
                android:id="@+id/register_password_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/new_password_drawable_invisible"></ImageView>

        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:text="@string/register"
            android:textSize="@dimen/dp_20"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:background="@color/red"></Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_text"
            android:layout_marginTop="@dimen/dp_10"></TextView>



    </LinearLayout>

</LinearLayout>