<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".shopp.userinfo.BindUserInfoActivity">

    <com.example.view.ToolBar
        android:gravity="center"
        android:layout_width="match_parent"
        app:leftIsShow="true"
        app:leftImg="@drawable/back"
        android:id="@+id/toolbar"
        app:titleText="绑定联系方式"
        app:titleTextColor="#000000"
        android:layout_height="@dimen/dp_50"></com.example.view.ToolBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@drawable/new_login_background"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="@dimen/dp_40"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_150"
                android:src="@drawable/community_default_user_icon"></ImageView>

            <LinearLayout
                android:layout_marginTop="@dimen/dp_40"
                android:background="@drawable/lin_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="@dimen/dp_30"
                    android:textColor="#000000"></TextView>

                <EditText
                    android:id="@+id/edit_phone"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_phone"></EditText>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:background="@color/gray"></View>

            <Button
                android:id="@+id/confirm_phone"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_width="match_parent"
                android:text="@string/conf_phone"
                android:textSize="@dimen/dp_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:background="@color/red"></Button>

            <LinearLayout
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/lin_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="@dimen/dp_30"
                    android:textColor="#000000"></TextView>

                <EditText
                    android:id="@+id/edit_address"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_address"></EditText>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:background="@color/gray"></View>

            <com.baidu.mapapi.map.MapView
                android:id="@+id/bmapView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:clickable="true" />

            <Button
                android:id="@+id/confirm_address"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_width="match_parent"
                android:text="@string/conf_address"
                android:textSize="@dimen/dp_20"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:background="@color/red"></Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_text"
                android:layout_marginTop="@dimen/dp_10"></TextView>


        </LinearLayout>

    </ScrollView>



</LinearLayout>